force-app/main/default/objects/ConfiguracaoChecklistDocumentos__mdt/ConfiguracaoChecklistDocumentos__mdt.object-meta.xml
<CustomObject>
    <label>Configuracão Checklist Documentos</label>
    <pluralLabel>Configuracões Checklist Documentos</pluralLabel>
</CustomObject>