force-app/main/default/objects/ConfiguracaoChecklistDocumentos__mdt/fields/CampoConta__c.field-meta.xml
<CustomField>
    <fullName>CampoConta__c</fullName>
    <label>Campo da conta</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>