force-app/main/default/objects/ConfiguracaoChecklistDocumentos__mdt/fields/LabelCampo__c.field-meta.xml
<CustomField>
    <fullName>LabelCampo__c</fullName>
    <label>Label do campo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>