force-app/main/default/objects/ConfiguracaoChecklistDocumentos__mdt/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo do Documento</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>